# numml

./: .gitignore  .gitmodules  LICENSE.md  pyproject.toml  readme.md  setup.py
cpp/: cuda_common.cu  cuda_common.cuh  sparse_csr.cpp  sparse_csr.hpp  sparse_csr_cpu.cpp  sparse_csr_cuda.cu  sparse_csr_gemm_cuda.cu  sparse_csr_lu_cpu.cpp  sparse_csr_tensor.cpp  superlu.hpp  vector_queue.hpp
demos/: add_spmat.ipynb  clustering.ipynb  csr_cuda.ipynb  csr_mm.ipynb  cuda.ipynb  gnn_classical.ipynb  heavyball.ipynb  heavyball_gnn.ipynb  jacobi.ipynb  jacobi_frob.ipynb  mat_conv.ipynb  multigrid.ipynb  pcg.ipynb  pcg_2d.ipynb  spai_grad.ipynb  splu.ipynb  splu_cpu_test.py  splu_cuda_test.py  spmm_cuda.ipynb  spmv.ipynb  spmv_cuda.ipynb  timing.py  tri_solve.ipynb
numml/: autograd.py  iterative.py  krylov.py  nn.py  profiler.py  sparse.py  utils.py
numml/sparse/: __init__.py  _csr.py  _linear_operator.py  linalg.py
numml/tests/: common.py  test_add.py  test_misc.py  test_spdmm.py  test_spmm.py  test_spmv.py  test_sptrsv.py  test_transpose.py
numml/torch/: sparse.py
tex/: .gitignore  background.bib  background.tex  example_autograd_fn.py  iterative.tex
